--- a/app/static/style.css
+++ b/app/static/style.css
@@ -14,27 +14,32 @@ h2, h3 {
     color: #333;
 }
 
-#topic-chart, #sentiment-chart, #sentiment-by-topic-chart, #topic-trends-chart {
+#topic-chart, #sentiment-chart, #sentiment-by-topic-chart, #topic-trends-chart, #sentiment-trends-chart {
     width: 80%;
     margin: 40px auto;
 }
 
-#topic-chart, #sentiment-chart, #sentiment-by-topic-chart, #topic-trends-chart {
+#topic-chart, #sentiment-chart, #sentiment-by-topic-chart, #topic-trends-chart, #sentiment-trends-chart {
     height: 500px;
 }
 
-.plotly-graph-div {
+.sample-posts-container {
+    max-height: 600px;
+    overflow-y: auto;
+    padding: 10px;
     border: 1px solid #ccc;
     background-color: #fff;
-    padding: 10px;
-    border-radius: 5px;
 }
 
-ul {
+.sample-posts {
+    margin-bottom: 30px;
+}
+
+.sample-posts ul {
     list-style-type: disc;
     margin-left: 40px;
 }
 
-li {
+.sample-posts li {
     margin-bottom: 10px;
 }
