--- a/app/static/style.css
+++ b/app/static/style.css
@@ -17,29 +17,46 @@ h2, h3 {
 #topic-chart, #sentiment-chart, #sentiment-by-topic-chart, #topic-trends-chart, #sentiment-trends-chart {
     width: 80%;
     margin: 40px auto;
-}
-
-#topic-chart, #sentiment-chart, #sentiment-by-topic-chart, #topic-trends-chart, #sentiment-trends-chart {
     height: 500px;
 }
 
-.sample-posts-container {
-    max-height: 600px;
+.impactful-posts-container {
+    max-height: 200px; /* Adjust as needed */
     overflow-y: auto;
     padding: 10px;
     border: 1px solid #ccc;
     background-color: #fff;
+    margin-bottom: 20px;
 }
 
-.sample-posts {
+.impactful-posts {
     margin-bottom: 30px;
 }
 
-.sample-posts ul {
+.impactful-posts ul {
     list-style-type: disc;
     margin-left: 40px;
 }
 
-.sample-posts li {
+.impactful-posts li {
     margin-bottom: 10px;
+}
+
+#topic-selection {
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+#topic-selection label {
+    font-weight: bold;
+}
+
+#topic-selection select {
+    width: 300px;
+    height: 100px;
+}
+
+#update-button {
+    margin-left: 10px;
+    padding: 5px 10px;
 }
